package NYT.NTabletNode.NProto;

import "yt/core/misc/guid.proto";
import "yt/ytlib/new_table_client/chunk_meta.proto";
import "yt/ytlib/chunk_client/chunk.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqMountTablet
{
    required NYT.NProto.TGuid tablet_id = 1;
    required NYT.NVersionedTableClient.NProto.TTableSchemaExt schema = 2;
    required NYT.NVersionedTableClient.NProto.TKeyColumnsExt key_columns = 3;
}

message TReqUnmountTablet
{
    required NYT.NProto.TGuid tablet_id = 1;
}

message TReqExecuteWrite
{
    required NYT.NProto.TGuid transaction_id = 1;
    required NYT.NProto.TGuid tablet_id = 2;
    required int32 commands_succeded = 3;
    required bytes encoded_request = 4;
}

////////////////////////////////////////////////////////////////////////////////

